update to game structure

--- a/dicee.html
+++ b/dicee.html
@@ -22,10 +22,12 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png" />
       </div>
+
+      <h4> <a href="dicee.html"> Click me </a></h4>
     </div>
 
     <script src="index.js"></script>
   </body>
 
-  <footer>www 🎲 App Brewery 🎲 com</footer>
+  <footer>🎲 Ajibolanle Gloria 🎲 </footer>
 </html>
